zrobiony adapter, soon...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:label="Drawing Activity"/>
         <activity android:name=".gallery.GalleryActivity"
             android:label="Gallery Activity"/>
+        <activity android:name=".todo_list.todoList_activity"
+            android:label="ToDo LisT"/>
+
   </application>
 
 </manifest>
