--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
             android:label="Gallery Activity"/>
         <activity android:name=".todo_list.todoList_activity"
             android:label="ToDo LisT"/>
+        <activity android:name=".milionQuiz.QuizActivity"
+            android:label="Milionerzy"/>
 
   </application>
 
