--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
         <activity android:name=".todo_list.todoList_activity"
             android:label="ToDo LisT"/>
         <activity android:name=".milionQuiz.QuizActivity"
-            android:label="Milionerzy"/>
+        android:label="Milionerzy"/>
+
+        <activity android:name=".books.BooksActivity"
+            android:label="Books"/>
 
   </application>
 
